Creacion pagina 'about' y modificacion de  'index' junto con sus css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title>Veterinaia</title>
+  <title>Bienvenidos a la Veterinaia</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="http://code.jquery.com/jquery-latest.js"></script>
 
@@ -22,8 +22,8 @@
 					<li><a href="">SERVICIOS</a></li>
 					<li><a href="">SOBRE NOSOTROS</a></li>
 					<li><a href="">CONTACTO</a></li>
-					<li><a id="log" href="">INICIAR SESION</a></li>
-					<li><a id="log" href="">REGISTRARSE</a></li>
+					<li><a href="">INICIAR SESION</a></li>
+					<li><a href="">REGISTRARSE</a></li>
 				</ul>
 			
 			</nav>
@@ -38,7 +38,7 @@
 		<div class="slider-frame" id="imagen">
 			<ul>
 				<li><a href="https://www.google.com" target="_blanck"><img src="img/general.jpg" alt=""></a></li>
-				<li><a href="https://www.google.com" target="_blanck"><img src="img/paseador.jpg" alt=""></li></a>
+				<li><a href="https://www.google.com" target="_blanck"><img src="img/paseador.jpg" alt=""></a></li>
 				<li><a href="https://www.google.com" target="_blanck"><img src="img/adopción.jpg" alt=""></a></li>
 				<li><a href="https://www.google.com" target="_blanck"><img src="img/guarderi.jpg" alt=""></a></li>
 			</ul>
