--- a/index.html
+++ b/index.html
@@ -1,53 +1,38 @@
 <!DOCTYPE <!DOCTYPE HTML>
 <html lang="es">
-<head>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title>Bienvenidos a la Veterinaia</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		<title>¡Oh My Dog!</title>
+		<link rel="stylesheet" href="css/style.css">
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
+	</head>
 
-
-  
-	
-</head>
-<body>
-
-			<!-- Cabecera -->
+	<body>
 
 		<header>
-			<nav id="menu">
+			<nav id="menu-nav-bar">
+				<img src="img/Logo1-removebg-preview.png" id="imghome">
 				<ul>
-					<li><a id="home" href=""><img src="img/Logo1-removebg-preview.png" id="imghome"></a></li>
-					<li><a href="">INICIO</a></li>
-					<li><a href="">SERVICIOS</a></li>
-					<li><a href="">SOBRE NOSOTROS</a></li>
-					<li><a href="">CONTACTO</a></li>
-					<li><a href="">INICIAR SESION</a></li>
-					<li><a href="">REGISTRARSE</a></li>
+					<li class="menu-nav-bar-item"><a class="link-style-menu" href="index.html">INICIO</a></li>
+					<li class="menu-nav-bar-item">SERVICIOS</li>
+					<li class="menu-nav-bar-item"><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li class="menu-nav-bar-item"><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<li class="menu-nav-bar-item"><a class="link-style-menu" href="sign-in.html">INICIAR SESION</a></li>
+					<li class="menu-nav-bar-item"><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
 				</ul>
-			
 			</nav>
 		</header>
 
+		<section id="section-index">
+			<div class="slider-frame">
+				<ul>
+					<li><a href="https://www.google.com" target="_blank"><img src="img/general.jpg"></a></li>
+					<li><a href="https://www.google.com" target="_blank"><img src="img/paseador.jpg"></a></li>
+					<li><a href="https://www.google.com" target="_blank"><img src="img/adopción.jpg"></a></li>
+					<li><a href="https://www.google.com" target="_blank"><img src="img/guarderia.jpg"></a></li>
+				</ul>
+			</div>
+		</section>	
 
-	<section id="global">
-
-		
-
-
-		<div class="slider-frame" id="imagen">
-			<ul>
-				<li><a href="https://www.google.com" target="_blanck"><img src="img/general.jpg" alt=""></a></li>
-				<li><a href="https://www.google.com" target="_blanck"><img src="img/paseador.jpg" alt=""></a></li>
-				<li><a href="https://www.google.com" target="_blanck"><img src="img/adopción.jpg" alt=""></a></li>
-				<li><a href="https://www.google.com" target="_blanck"><img src="img/guarderi.jpg" alt=""></a></li>
-			</ul>
-			
-		</div>
-
-
-
-	</section>	
-  
-</body>
+	</body>
 </html>
