--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		<meta name="viewport" content="initial-scale=1">
 		<title>¡Oh My Dog!</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -10,17 +11,22 @@
 	<body>
 
 		<header>
-			<nav id="menu-nav-bar">
-				<img src="img/Logo1-removebg-preview.png" id="imghome">
-				<ul>
-					<li class="menu-nav-bar-item"><a class="link-style-menu" href="index.html">INICIO</a></li>
-					<li class="menu-nav-bar-item">SERVICIOS</li>
-					<li class="menu-nav-bar-item"><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
-					<li class="menu-nav-bar-item"><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
-					<li class="menu-nav-bar-item"><a class="link-style-menu" href="sign-in.html">INICIAR SESION</a></li>
-					<li class="menu-nav-bar-item"><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
+			<img src="img/Logo1-removebg-preview.png" id="imghome">
+			<div id="menu">
+				<ul id="ul-style-menu">
+					<div class="border"></div>
+					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu" href="sign-in.html">INICIAR SESION</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
+					<div class="border"></div>
 				</ul>
-			</nav>
+			</div>
 		</header>
 
 		<section id="section-index">
