seccion iniciar sesion y registrar

--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog!</title>
+		<title>¡Oh My Dog! - Regístrate</title>
 		<link rel="stylesheet" href="css/nuevo.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
@@ -28,5 +28,16 @@
 				</ul>
 			</div>
 		</header>
+
+		<section id="seccion-sign">
+			<h1>Registrar Usuario</h1>
+			<form>
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email" required>
+
+				<input type="submit" value="Registrar">
+			</form>
+		</section>
+
 	</body>
 </html>
