Cambio de estilo del sign-in y sign-up.

--- a/sign-in.html
+++ b/sign-in.html
@@ -4,12 +4,11 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
 		<title>¡Oh My Dog! - Regístrate</title>
-		<link rel="stylesheet" href="css/nuevo.css">
+		<link rel="stylesheet" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
 	<body>
-
 		<header>
 			<img src="img/Logo1-removebg-preview.png" id="imghome">
 			<div id="menu">
@@ -21,25 +20,20 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="sign-in.html">INICIAR SESION</a></li>
-					<div class="border"></div>
 					<li><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
 					<div class="border"></div>
 				</ul>
 			</div>
 		</header>
 
-		<section id="seccion-sign">
-			<h1>Iniciar Sesion</h1>
-			<form>
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email" required>
-
-				<label for="contra">Contraseña:</label>
-				<input type="password" id="contraseña" name="contraseña" required>
-				<input type="submit" value="Iniciar Sesion">
+		<div class="body-sign-in-and-up">
+			<form action="index.html" method="post">
+				<label class="sign-in-and-sign-up-label">Iniciar sesi&oacute;n</label><br>
+				<input type="email" name="email" class="input-style" placeholder="Email"><br>
+				<input type="password" name="password" class="input-style" placeholder="Contraseña"><br>
+				<input type="submit" value="Continuar" class="continuar-y-registrarme-btn">
 			</form>
-		</section>
-
+			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate.</a>.</label>
+        </div>
 	</body>
 </html>
