--- a/sign-up.html
+++ b/sign-up.html
@@ -4,12 +4,11 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
 		<title>¡Oh My Dog! - Regístrate</title>
-		<link rel="stylesheet" href="css/nuevo.css">
+		<link rel="stylesheet" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
 	<body>
-
 		<header>
 			<img src="img/Logo1-removebg-preview.png" id="imghome">
 			<div id="menu">
@@ -23,21 +22,19 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="sign-in.html">INICIAR SESION</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
-					<div class="border"></div>
 				</ul>
 			</div>
 		</header>
 
-		<section id="seccion-sign">
-			<h1>Registrar Usuario</h1>
-			<form>
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email" required>
-
-				<input type="submit" value="Registrar">
-			</form>
-		</section>
-
+		<div class="body-sign-in-and-up">
+            <form action="index.html" method="post">
+                <label class="sign-in-and-sign-up-label">Crear una cuenta</label><br>
+                <input type="email" name="email" class="input-style" placeholder="Email"><br>
+                <input type="password" name="password" class="input-style" placeholder="Contraseña"><br>
+                <input type="password" name="password" class="input-style" placeholder="Confirmar contraseña"><br>
+                <input type="submit" value="Registrarme" class="continuar-y-registrarme-btn">
+            </form>
+            <label class="pregunta-label">¿Ya ten&eacute;s una cuenta? <a href="sign-in.html" target="_blank" class="pregunta-link">Inici&aacute; sesi&oacute;n</a>.</label>
+        </div>
 	</body>
 </html>
