Saqué la contraseña del sign-up.

--- a/sign-up.html
+++ b/sign-up.html
@@ -30,8 +30,7 @@
             <form action="index.html" method="post">
                 <label class="sign-in-and-sign-up-label">Crear una cuenta</label><br>
                 <input type="email" name="email" class="input-style" placeholder="Email"><br>
-                <input type="password" name="password" class="input-style" placeholder="Contraseña"><br>
-                <input type="password" name="password" class="input-style" placeholder="Confirmar contraseña"><br>
+				Se te enviará un correo con una contraseña aleatoria. <br>
                 <input type="submit" value="Registrarme" class="continuar-y-registrarme-btn">
             </form>
             <label class="pregunta-label">¿Ya ten&eacute;s una cuenta? <a href="sign-in.html" target="_blank" class="pregunta-link">Inici&aacute; sesi&oacute;n</a>.</label>
