Se agregaron los archivos para cambiar el estado de los botones de logueo, se agrego el cerrar sesion, se modificaron los html agregando el nuevo boton de cerrar sesion y se agregaron clases e id que fueron modificados en el archivo css

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="sign-in.html">INICIAR SESION</a></li>
+					<li><a class="link-style-menu stateSing" href="sign-in.html">INICIAR SESION</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
+					<li><a class="link-style-menu stateSing" href="sign-up.html">REGISTRARSE</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
 				</ul>
 			</div>
@@ -41,4 +43,6 @@
 		</section>	
 
 	</body>
+	<script src="js/cambiarEstadoBotones.js"></script>	
+	<script src="js/cerrarSesion.js"></script>
 </html>
