--- a/sign-in.html
+++ b/sign-in.html
@@ -31,7 +31,7 @@
 				<label class="sign-in-and-sign-up-label">Iniciar sesi&oacute;n</label><br>
 				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
 				<input type="password" name="password" id="log-in-password" class="input-style" placeholder="Contraseña"><br>
-				<input type="submit" id="submit" value="Continuar" class="continuar-y-registrarme-btn">
+				<input type="submit" id="submitLog" value="Continuar" class="continuar-y-registrarme-btn">
 			</form>
 			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate.</a>.</label>
         </div>
