Correcion en los html de registro de paseadores y cuiadores

--- a/formRegistroP.html
+++ b/formRegistroP.html
@@ -16,11 +16,13 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
+					<li><a class="link-style-menu" href="servicios.html">SERVICIOS</a></li>
+					<div class="border"></div>
 					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
+					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
 				</ul>
 			</div>
