--- a/sign-in.html
+++ b/sign-in.html
@@ -27,11 +27,12 @@
 		</header>
 
 		<div class="body-sign-in-and-up">
-			<form action="index.html" method="post">
+			<form id="formulario" action="index.html" method="post">
 				<label class="sign-in-and-sign-up-label">Iniciar sesi&oacute;n</label><br>
 				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
 				<input type="password" name="password" id="log-in-password" class="input-style" placeholder="Contraseña"><br>
-				<input type="submit" id="submitLog" value="Continuar" class="continuar-y-registrarme-btn">
+				 <p class="mensaje-error"></p>	
+				<input type="submit"  value="Continuar" class="continuar-y-registrarme-btn">
 			</form>
 			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate.</a>.</label>
         </div>
