Cambios menores y registrar-perro.html añadido.

--- a/formRegistroP.html
+++ b/formRegistroP.html
@@ -30,15 +30,13 @@
 
 		<div class="body-sign-in-and-up">
 			<form action="index.html" method="post">
-				<label class="sign-in-and-sign-up-label">Registrar paseador</label><br>
-				<input type="text" name="name" id="log-in-email" class="input-style" placeholder="Nombre" required><br>
-				<input type="text" name="lastName" id="log-in-password" class="input-style" placeholder="Apellido" required><br>
-				<input type="text" name="service" id="log-in-email" class="input-style" placeholder="Servicio" required><br>
-				<input type="text" name="place" id="log-in-email" class="input-style" placeholder="Lugar" required><br>
+				<label class="form-label">Registrar paseador</label><br>
+				<input type="text" name="name" class="input-style" placeholder="Nombre" required><br>
+				<input type="text" name="lastName" class="input-style" placeholder="Apellido" required><br>
+				<input type="text" name="service" class="input-style" placeholder="Servicio" required><br>
+				<input type="text" name="place" class="input-style" placeholder="Lugar" required><br>
 				<input type="submit" id="submitLog" value="Registrar" class="continuar-y-registrarme-btn">
-				
 			</form>
-			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate.</a>.</label>
         </div>
 	</body>
 </html>
