--- a/sign-in.html
+++ b/sign-in.html
@@ -28,7 +28,7 @@
 
 		<div class="body-sign-in-and-up">
 			<form action="index.html" method="post">
-				<label class="sign-in-and-sign-up-label">Iniciar sesi&oacute;n</label><br>
+				<label class="form-label">Iniciar sesi&oacute;n</label><br>
 				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
 				<input type="password" name="password" id="log-in-password" class="input-style" placeholder="Contraseña"><br>
 				<input type="submit" id="submitLog" value="Continuar" class="continuar-y-registrarme-btn">
