--- a/sign-up.html
+++ b/sign-up.html
@@ -28,7 +28,7 @@
 
 		<div class="body-sign-in-and-up">
             <form id="formulario" action="index.html" method="post" >
-                <label class="sign-in-and-sign-up-label">Crear una cuenta</label><br>
+                <label class="form-label">Crear una cuenta</label><br>
                 <input type="email" id="email" name="email" class="input-style" placeholder="Email"><br>
 				Se te enviará un correo con una contraseña aleatoria. <br>
 				<p class="mensaje-error"></p>
