Cambios menores y registrar-perro.html añadido. (de nuevo)

--- a/sign-in.html
+++ b/sign-in.html
@@ -27,19 +27,14 @@
 		</header>
 
 		<div class="body-sign-in-and-up">
-<<<<<<< HEAD
-			<form action="index.html" method="post">
-				<label class="form-label">Iniciar sesi&oacute;n</label><br>
-=======
 			<form id="formulario" action="index.html" method="post">
-				<label class="sign-in-and-sign-up-label">Iniciar sesi&oacute;n</label><br>
->>>>>>> 93624f1a442df9ca8704da97f290e33db05bafc5
+				<label class="form-label">Iniciar sesi&oacute;n</label><br>
 				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
 				<input type="password" name="password" id="log-in-password" class="input-style" placeholder="Contraseña"><br>
 				 <p class="mensaje-error"></p>	
 				<input type="submit"  value="Continuar" class="continuar-y-registrarme-btn">
 			</form>
-			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate.</a>.</label>
+			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate</a>.</label>
         </div>
 	</body>
 	<script src="js/validarInicioSesion.js"></script>
