--- a/sign-up.html
+++ b/sign-up.html
@@ -27,15 +27,13 @@
 		</header>
 
 		<div class="body-sign-in-and-up">
-            <form id="formulario" action="index.html" method="post" >
+            <form id="formulario" action="sign-up-datos.html" method="post" >
                 <label class="form-label">Crear una cuenta</label><br>
                 <input type="email" id="email" name="email" class="input-style" placeholder="Email"><br>
-				Se te enviará un correo con una contraseña aleatoria. <br>
 				<p class="mensaje-error"></p>
                 <input type="submit" value="Registrarme" class="continuar-y-registrarme-btn" >
             </form>
-            <label class="pregunta-label">¿Ya ten&eacute;s una cuenta? <a href="sign-in.html" target="_blank" class="pregunta-link">Inici&aacute; sesi&oacute;n</a>.</label>
         </div>
 	</body>
-		<script src="js/validarRegistro.js"></script>
+		<script src="js/validarEmailRegistro.js"></script>
 </html>
