--- a/form-RegistroCP.html
+++ b/form-RegistroCP.html
@@ -1,15 +1,14 @@
-<!DOCTYPE <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html lang="es">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog!</title>
+		<title>¡Oh My Dog! - Registro cuidadores</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
 	<body>
-
 		<header>
 			<img src="img/Logo1-removebg-preview.png" id="imghome">
 			<div id="menu">
@@ -17,7 +16,7 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
-					<li>
+                    <li>
 						<a class="link-style-menu" href="index.html">Servicios</a>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option value="" selected disabled>Selecciona una opción</option>
@@ -28,12 +27,9 @@
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
 						</select>
 					</li>
-					<div class="border"></div>
 					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
-					<div class="border"></div>
-					<li><a class="link-style-menu stateSing" href="sign-in.html">INICIAR SESION</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateSing registrar-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
@@ -43,18 +39,26 @@
 			</div>
 		</header>
 
-		<section id="section-index">
-			<div class="slider-frame">
-				<ul>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/general.jpg"></a></li>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/paseador.jpg"></a></li>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/adopción.jpg"></a></li>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/guarderia.jpg"></a></li>
-				</ul>
-			</div>
-		</section>	
-
+		<div class="body-sign-in-and-up">
+			<form id="formulario" action="index.html" method="post">
+				<label class="form-label">Formulario de Registro para Cuidadores y Paseadores</label><br>
+				<input type="text" name="name" class="input-style" placeholder="Nombre" required><br>
+				<input type="text" name="lastName" class="input-style" placeholder="Apellido" required><br>
+				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
+				<select name="service" class="input-style" required>
+					<option value="" selected disabled>Selecciona un servicio</option>
+					<option value="cuidador">Cuidador</option>
+					<option value="paseador">Paseador</option>
+					<!-- Agrega más opciones si es necesario -->
+				  </select><br>
+				<input type="text" name="place" class="input-style" placeholder="Lugar" required><br>
+				<p class="mensaje-error"></p>
+				<input type="submit" id="submitLog" value="Registrar" class="continuar-y-registrarme-btn">
+				
+			</form>
+        </div>
 	</body>
-	<script src="js/cambiarEstadoBotones.js"></script>	
+	<script src="js/v-cuidador-paseador.js"></script>
+	<script src="js/cambiarEstadoBotones.js"></script>
 	<script src="js/cerrarSesion.js"></script>
 </html>
