--- a/sign-in.html
+++ b/sign-in.html
@@ -16,11 +16,24 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
+					<li>
+						<a class="link-style-menu" href="index.html">Servicios</a>
+						<select onchange="if (this.value) window.location.href = this.value;">
+							<option value="" selected disabled>Selecciona una opción</option>
+							<option value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
+							<option value="cargarAdopcion.html">Registrar Perro para adopcion</option>
+							<option value="mostrarPaseador.html">Mostrar Paseadores</option>
+							<option value="mostrarCuidador.html">Mostrar Cuidadores</option>
+							<option value="verAdopciones.html">Mostrar Adopciones</option>
+						</select>
+					</li>
 					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="sign-up.html">REGISTRARSE</a></li>
+					<li><a class="link-style-menu stateSing registrar-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
+					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
+					
 					<div class="border"></div>
 				</ul>
 			</div>
@@ -31,11 +44,13 @@
 				<label class="form-label">Iniciar sesi&oacute;n</label><br>
 				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
 				<input type="password" name="password" id="log-in-password" class="input-style" placeholder="Contraseña"><br>
-				 <p class="mensaje-error"></p>	
+				<p class="mensaje-error"></p>	
 				<input type="submit"  value="Continuar" class="continuar-y-registrarme-btn">
 			</form>
 			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate</a>.</label>
         </div>
 	</body>
 	<script src="js/validarInicioSesion.js"></script>
+	<script src="js/cambiarEstadoBotones.js"></script>
+	<script src="js/cerrarSesion.js"></script>
 </html>
