--- a/sign-up.html
+++ b/sign-up.html
@@ -16,12 +16,23 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
+					<li>
+						<a class="link-style-menu" href="index.html">Servicios</a>
+						<select onchange="if (this.value) window.location.href = this.value;">
+							<option value="" selected disabled>Selecciona una opción</option>
+							<option value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
+							<option value="cargarAdopcion.html">Registrar Perro para adopcion</option>
+							<option value="mostrarPaseador.html">Mostrar Paseadores</option>
+							<option value="mostrarCuidador.html">Mostrar Cuidadores</option>
+							<option value="verAdopciones.html">Mostrar Adopciones</option>
+						</select>
+					</li>
 					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="sign-in.html">INICIAR SESION</a></li>
-					<div class="border"></div>
+					
 				</ul>
 			</div>
 		</header>
@@ -35,5 +46,7 @@
             </form>
         </div>
 	</body>
-		<script src="js/validarEmailRegistro.js"></script>
+	<script src="js/cambiarEstadoBotones.js"></script>	
+	<script src="js/validarEmailRegistro.js"></script>
+	<script src="js/cerrarSesion.js"></script>
 </html>
