--- a/verAdopciones.html
+++ b/verAdopciones.html
@@ -1,17 +1,16 @@
-<!DOCTYPE <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html lang="es">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog!</title>
+		<title>¡Oh My Dog! - Ver adopciones</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
-	<body>
-
+	<body class="adopcion">
 		<header>
-			<img src="img/Logo1-removebg-preview.png" id="imghome">
+			<a href="index.html"><img src="img/Logo1-removebg-preview.png" id="imghome"></a>
 			<div id="menu">
 				<ul id="ul-style-menu">
 					<div class="border"></div>
@@ -28,7 +27,6 @@
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
 						</select>
 					</li>
-					<div class="border"></div>
 					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
@@ -42,19 +40,13 @@
 				</ul>
 			</div>
 		</header>
-
-		<section id="section-index">
-			<div class="slider-frame">
-				<ul>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/general.jpg"></a></li>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/paseador.jpg"></a></li>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/adopción.jpg"></a></li>
-					<li><a href="https://www.google.com" target="_blank"><img src="img/guarderia.jpg"></a></li>
-				</ul>
-			</div>
-		</section>	
-
+        
+        <div class="body-contenedor" id="contenedorDatos">
+            <h1>Adopciones</h1><br>
+            <hr>
+        </div>
+        <script src="js/mostrarAdopciones.js"></script>
+		<script src="js/cambiarEstadoBotones.js"></script>
+	    <script src="js/cerrarSesion.js"></script>
 	</body>
-	<script src="js/cambiarEstadoBotones.js"></script>	
-	<script src="js/cerrarSesion.js"></script>
 </html>
