Enviar Mail al correo, esconder botones y mostrar Solicitar turno

--- a/sign-up.html
+++ b/sign-up.html
@@ -27,12 +27,19 @@
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
 						</select>
 					</li>
-					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">Listar Usuarios</a></li>	
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateSing registrar-perro" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu solicitar-turno" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
+					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
-					<div class="border"></div>
-					
+					<div class="border"></div>	
 				</ul>
 			</div>
 		</header>
@@ -47,6 +54,6 @@
         </div>
 	</body>
 	<script src="js/cambiarEstadoBotones.js"></script>	
-	<script src="js/validarEmailRegistro.js"></script>
+	<script src="js/validarEmailRegistro.js" type="module"></script>
 	<script src="js/cerrarSesion.js"></script>
 </html>
