--- a/form-RegistroCP.html
+++ b/form-RegistroCP.html
@@ -27,9 +27,14 @@
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
 						</select>
 					</li>
-					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateSing registrar-perro" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu solicitar-turno" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateSing registrar-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
@@ -58,7 +63,7 @@
 			</form>
         </div>
 	</body>
-	<script src="js/v-cuidador-paseador.js"></script>
+	<script src="js/v-cuidador-paseador.js" type="module"></script>
 	<script src="js/cambiarEstadoBotones.js"></script>
 	<script src="js/cerrarSesion.js"></script>
 </html>
