--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">Listar Usuarios</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateSing" href="sign-in.html">INICIAR SESION</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateSing registrar-perro" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu solicitar-turno" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateSing registrar-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
