--- a/mostrarUsuarios.html
+++ b/mostrarUsuarios.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog! - Regístrate</title>
+		<title>¡Oh My Dog! - Ver Usuarios</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
-	<body>
+	<body class="adopcion">
 		<header>
-			<img src="img/Logo1-removebg-preview.png" id="imghome">
+			<a href="index.html"><img src="img/Logo1-removebg-preview.png" id="imghome"></a>
 			<div id="menu">
 				<ul id="ul-style-menu">
 					<div class="border"></div>
@@ -28,10 +28,11 @@
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">Listar Usuarios</a></li>					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateSing" href="sign-in.html">INICIAR SESION</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateSing registrar-perro" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
 					<div class="border"></div>
@@ -40,24 +41,17 @@
 					<li><a class="link-style-menu stateSing registrar-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
-					
 					<div class="border"></div>
 				</ul>
 			</div>
 		</header>
-
-		<div class="body-sign-in-and-up">
-			<form id="formulario" action="index.html" method="post">
-				<label class="form-label">Iniciar sesi&oacute;n</label><br>
-				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
-				<input type="password" name="password" id="log-in-password" class="input-style" placeholder="Contraseña"><br>
-				<p class="mensaje-error"></p>	
-				<input type="submit"  value="Continuar" class="continuar-y-registrarme-btn">
-			</form>
-			<label class="pregunta-label">¿No ten&eacute;s una cuenta? <a href="sign-up.html" target="_blank" class="pregunta-link">Registrate</a>.</label>
+        
+        <div class="body-contenedor" id="contenedorDatos">
+            <h1>Usuarios</h1><br>
+            <hr>
         </div>
+        <script src="js/mostrarUsuarios.js" type="module"></script>
+	    <script src="js/cambiarEstadoBotones.js"></script>
+	    <script src="js/cerrarSesion.js"></script>
 	</body>
-	<script src="js/validarInicioSesion.js" type="module"></script>
-	<script src="js/cambiarEstadoBotones.js"></script>
-	<script src="js/cerrarSesion.js"></script>
 </html>
