--- a/registrar-perro.html
+++ b/registrar-perro.html
@@ -15,11 +15,28 @@
                 <div class="border"></div>
                 <li><a class="link-style-menu" href="index.html">INICIO</a></li>
                 <div class="border"></div>
-                <li><a class="link-style-menu" href="servicios.html">SERVICIOS</a></li>
+                <li>
+                    <a class="link-style-menu" href="index.html">Servicios</a>
+                    <select onchange="if (this.value) window.location.href = this.value;">
+                        <option value="" selected disabled>Selecciona una opción</option>
+                        <option value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
+                        <option value="cargarAdopcion.html">Registrar Perro para adopcion</option>
+                        <option value="mostrarPaseador.html">Mostrar Paseadores</option>
+                        <option value="mostrarCuidador.html">Mostrar Cuidadores</option>
+                        <option value="verAdopciones.html">Mostrar Adopciones</option>
+                    </select>
+                </li>
                 <div class="border"></div>
-                <li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+                <li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">Listar Usuarios</a></li>					<div class="border"></div>
+                <li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
                 <div class="border"></div>
-                <li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+                <li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
+                <div class="border"></div>
+                <li><a class="link-style-menu stateSing" href="sign-in.html">INICIAR SESION</a></li>
+                <div class="border"></div>
+                <li><a class="link-style-menu solicitar-turno" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
+				<div class="border"></div>
+                <li><a class="link-style-menu stateSing registrar-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
                 <div class="border"></div>
                 <li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
                 <div class="border"></div>
@@ -27,17 +44,32 @@
         </div>
     </header>
 
-    <div class="body-sign-in-and-up">
-        <form action="index.html" method="post">
+    <div class="body-contenedor">
+        <form id="formulario" action="index.html" method="post" enctype="multipart/form-data">
             <label class="form-label">Registrar perro</label><br>
+            <input type="email" name="mail" id="read-only" class="input-style" readonly required><br>
+            <script>	
+                const aux = localStorage.getItem('emailRegistroPerro');
+                document.getElementById('read-only').value = aux;
+            </script>
             <input type="text" name="name" class="input-style" placeholder="Nombre del perro" required><br>
-            <input type="text" name="lastName" class="input-style" placeholder="Raza" required><br>
-            <input type="text" name="service" class="input-style" placeholder="Color" required><br>
-            <input type="text" name="place" class="input-style" placeholder="Fecha de nacimiento" required><br>
-            <input type="text" name="place" class="input-style" placeholder="Observaciones (opcional)" required><br>
-            Foto (opcional)
+            <input type="text" name="raza" class="input-style" placeholder="Raza" required><br>
+            <input type="text" name="color" class="input-style" placeholder="Color" required><br>
+            <input type="date" name="nacimiento" class="input-style" placeholder="Fecha de nacimiento" required><br>
+            <input type="text" name="observaciones" class="input-style" value="Sin Observaciones" placeholder="Observaciones (opcional)"><br><br>
+            Foto (opcional) <br><br>
+            <input type="file" name="foto"><br><br>
+            Disponibilidad para cruza:
+            <select name="disponibilidad_cruza" required>
+                <option value="0">No</option>
+                <option value="1">Si</option>
+            </select><br>
+            <p class="mensaje-error"></p>
             <input type="submit" id="submitLog" value="Registrar" class="continuar-y-registrarme-btn">
         </form>
     </div>
+    <script src="js/validarDatosPerro.js" type="module"></script>
+    <script src="js/cambiarEstadoBotones.js"></script>
+	<script src="js/cerrarSesion.js"></script>
 </body>
 </html>
