--- a/sign-up-datos.html
+++ b/sign-up-datos.html
@@ -16,14 +16,32 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
-                    <li><a class="link-style-menu" href="servicios.html">SERVICIOS</a></li>
+					<li>
+						<a class="link-style-menu" href="index.html">Servicios</a>
+						<select onchange="if (this.value) window.location.href = this.value;">
+							<option value="" selected disabled>Selecciona una opción</option>
+							<option value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
+							<option value="cargarAdopcion.html">Registrar Perro para adopcion</option>
+							<option value="mostrarPaseador.html">Mostrar Paseadores</option>
+							<option value="mostrarCuidador.html">Mostrar Cuidadores</option>
+							<option value="verAdopciones.html">Mostrar Adopciones</option>
+						</select>
+					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">Listar Usuarios</a></li>	
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateSing registrar-perro" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu solicitar-turno" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu solicitar-turno" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
-					<div class="border"></div>
+					<div class="border"></div>	
 				</ul>
 			</div>
 		</header>
@@ -47,5 +65,7 @@
 			</form>
         </div>
 	</body>
-	<script src="js/validarDatosRegistro.js"></script>
+	<script src="js/validarDatosRegistro.js" type="module"></script>
+	<script src="js/cerrarSesion.js"></script>
+	<script src="js/cambiarEstadoBotones.js"></script>	
 </html>
