--- a/verAdopciones.html
+++ b/verAdopciones.html
@@ -27,11 +27,17 @@
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
 						</select>
 					</li>
-					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">Listar Usuarios</a></li>					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateSing" href="sign-in.html">INICIAR SESION</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateSing registrar-perro" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu solicitar-turno" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateSing registrar-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
@@ -45,7 +51,7 @@
             <h1>Adopciones</h1><br>
             <hr>
         </div>
-        <script src="js/mostrarAdopciones.js"></script>
+        <script src="js/mostrarAdopciones.js" type="module"></script>
 		<script src="js/cambiarEstadoBotones.js"></script>
 	    <script src="js/cerrarSesion.js"></script>
 	</body>
