--- a/form-RegistroCP.html
+++ b/form-RegistroCP.html
@@ -17,7 +17,7 @@
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
                     <li>
-						<a class="link-style-menu" href="index.html">Servicios</a>
+						<a class="link-style-menu" href="index.html">SERVICIOS</a>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option value="" selected disabled>Selecciona una opción</option>
 							<option value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
