--- a/registrar-perro.html
+++ b/registrar-perro.html
@@ -16,7 +16,7 @@
                 <li><a class="link-style-menu" href="index.html">INICIO</a></li>
                 <div class="border"></div>
                 <li>
-                    <a class="link-style-menu" href="index.html">Servicios</a>
+                    <a class="link-style-menu" href="index.html">SERVICIOS</a>
                     <select onchange="if (this.value) window.location.href = this.value;">
                         <option value="" selected disabled>Selecciona una opción</option>
                         <option value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
@@ -27,7 +27,7 @@
                     </select>
                 </li>
                 <div class="border"></div>
-                <li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">Listar Usuarios</a></li>					<div class="border"></div>
+                <li><a class="link-style-menu ver-usuarios" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>					<div class="border"></div>
                 <li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
                 <div class="border"></div>
                 <li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
