--- a/listar-mis-turnos.html
+++ b/listar-mis-turnos.html
@@ -17,7 +17,7 @@
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
 					<li>
-						<label class="link-style-menu">Servicios</label>
+						<label class="link-style-menu">SERVICIOS</label>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option value="" selected disabled>Selecciona una opción</option>
                             <option value="solicitar-turno.html">Solicitar un turno</option>
