--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -16,7 +16,7 @@
 					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
 					<li>
-						<label class="link-style-menu">Servicios</label>
+						<label class="link-style-menu">SERVICIOS</label>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option value="" selected disabled>Selecciona una opción</option>
 							<option value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
