--- a/listar-mis-turnos.html
+++ b/listar-mis-turnos.html
@@ -44,7 +44,7 @@
             <h1>Mis turnos</h1><br>
             <hr>
         </div>
-		<script src="js/listarTurnos.js"></script>
+		<script src="js/listarTurnos.js" type="module"></script>
 	    <script src="js/cambiarEstadoBotones.js"></script>
 	    <script src="js/cerrarSesion.js"></script>
 	</body>
