--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -24,6 +24,7 @@
 							<option value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
+							<option value="listar-mis-turnos.html">Listar mis turnos</option>
 						</select>
 					</li>
 					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
