--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							<option value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
+							<option value="listar-mis-turnos.html">Listar mis turnos</option>
 						</select>
 					</li>
 					<div class="border"></div>
