Faltan un par de cambios nomas

--- a/registrar-perro.html
+++ b/registrar-perro.html
@@ -45,7 +45,7 @@
     </header>
 
     <div class="body-contenedor">
-        <form id="formulario" action="index.html" method="post" enctype="multipart/form-data">
+        <form id="formulario" action="" method="post" enctype="multipart/form-data">
             <label class="form-label">Registrar perro</label><br>
             <input type="email" name="mail" id="read-only" class="input-style" readonly required><br>
             <script>	
