--- a/mostrarPaseador.html
+++ b/mostrarPaseador.html
@@ -53,7 +53,7 @@
             <h1>Paseadores</h1><br>
             <hr>
         </div>
-		<script src="js/obtenerIdUrl.js"></script>
+		<script src="js/obtenerIdUrlConForm.js"></script>
         <script src="js/mostrarPaseador.js" type="module"></script>
 		<script src="js/cambiarEstadoBotones.js"></script>
 	    <script src="js/cerrarSesion.js"></script>
