--- a/registrar-perro.html
+++ b/registrar-perro.html
@@ -24,6 +24,7 @@
                         <option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
                         <option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
                         <option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
+                        <option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
                     </select>
                 </li>
                 <div class="border"></div>
