--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -44,7 +44,10 @@
                 Servicio:
                 <select name="servicio" id="servicio" required>
                     <option value="castracion">Castraci&oacute;n</option>
-                    <option value="a">a</option>
+                    <option value="aplicacion-vacuna">Aplicación de vacuna</option>
+					<option value="desparacitacion">Desparasitaci&oacute;n</option>
+					<option value="consulta-general">Consulta general</option>
+					<option value="urgencias">Urgencias</option>
                 </select> <br>
                 Horario:
                 <input type="radio" name="horario" value="horario-maniana" required>Mañana 
