--- a/verAdopciones.html
+++ b/verAdopciones.html
@@ -52,7 +52,7 @@
             <h1>Adopciones</h1><br>
             <hr>
         </div>
-		<script src="js/obtenerIdUrl.js"></script>
+		<script src="js/obtenerIdUrlConForm.js"></script>
         <script src="js/mostrarAdopciones.js" type="module"></script>
 		<script src="js/cambiarEstadoBotones.js"></script>
 	    <script src="js/cerrarSesion.js"></script>
