--- a/form-RegistroCP.html
+++ b/form-RegistroCP.html
@@ -63,7 +63,7 @@
 			</form>
         </div>
 	</body>
-	<script src="js/obtenerIdUrl.js"></script>
+	<script src="js/obtenerIdUrlConForm.js"></script>
 	<script src="js/v-cuidador-paseador.js" type="module"></script>
 	<script src="js/cambiarEstadoBotones.js"></script>
 	<script src="js/cerrarSesion.js"></script>
