--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="menu">
 				<ul id="ul-style-menu">
 					<div class="border"></div>
-					<li><a class="link-style-menu option-menu" href="index.html">INICIO</a></li>
+					<li><a class="link-style-menu" class="option-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
 					<li>
 						<a class="link-style-menu option-select-menu" href="index.html">SERVICIOS</a>
@@ -26,23 +26,24 @@
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
-							<option class="option-select-menu" value="listar-mis-turnos.html">Listar mis turnos</option>
+							<option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
+							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ver-usuarios option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>
+					<li><a class="link-style-menu ver-usuarios" class="option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ocultar-nos option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li><a class="link-style-menu ocultar-nos" class="option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ocultar-con option-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu ocultar-con" class="option-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu stateSing option-menu" href="sign-in.html">INICIAR SESION</a></li>
+					<li><a class="link-style-menu stateSing" class="option-menu" href="sign-in.html">INICIAR SESION</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu stateSing registrar-perro option-menu" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
+					<li><a class="link-style-menu stateSing registrar-perro" class="option-menu" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu solicitar-turno option-menu" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
+					<li><a class="link-style-menu solicitar-turno" class="option-menu" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu stateSing registrar-menu option-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
+					<li><a class="link-style-menu stateSing registrar-menu" class="option-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
@@ -51,7 +52,7 @@
 		</header>
 
 	</body>
-	<script src="js/obtenerIdUrl.js"></script>
+	<script src="js/obtenerIdUrlConForm.js"></script>
 	<script src="js/cambiarEstadoBotones.js"></script>	
 	<script src="js/cerrarSesion.js"></script>
 </html>
