--- a/listar-mis-turnos.html
+++ b/listar-mis-turnos.html
@@ -44,7 +44,7 @@
             <h1>Mis turnos</h1><br>
             <hr>
         </div>
-        <script src="js/obtenerIdUrl.js"></script>
+        <script src="js/obtenerIdUrlConForm.js"></script>
 		<script src="js/listarMisTurnos.js" type="module"></script>
 	    <script src="js/cambiarEstadoBotones.js"></script>
 	    <script src="js/cerrarSesion.js"></script>
