--- a/mostrarUsuarios.html
+++ b/mostrarUsuarios.html
@@ -25,6 +25,7 @@
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
+							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 						</select>
 					</li>
 					<div class="border"></div>
@@ -50,7 +51,7 @@
             <h1>Usuarios</h1><br>
             <hr>
         </div>
-		<script src="js/obtenerIdUrl.js"></script>
+		<script src="js/obtenerIdUrlConForm.js"></script>
         <script src="js/mostrarUsuarios.js" type="module"></script>
 	    <script src="js/cambiarEstadoBotones.js"></script>
 	    <script src="js/cerrarSesion.js"></script>
