Se agrego la funcion para registrar una nueva campaña de donacion; se creo el formulario a completar junto con sus respectivos js y php, se modifico el archivo para cambiar los estados de los botones, se agrego la funcion al index y se modifico la barra de tareas en el archivo sign-in.html. FALTA AGREGAR EL SERVICIO EN EL RESTO DE LOS HTML

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="initial-scale=1">
 		<title>¡Oh My Dog!</title>
 		<link rel="stylesheet" href="css/style.css">
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
 	<body>
@@ -28,6 +28,7 @@
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
 							<option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
 							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
+							<option class="option-select-menu" value="formCampaniaDonacion.html">Registrar campaña de donacion</option>
 						</select>
 					</li>
 					<div class="border"></div>
