--- a/sign-up.html
+++ b/sign-up.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="initial-scale=1">
 		<title>¡Oh My Dog! - Regístrate</title>
 		<link rel="stylesheet" href="css/style.css">
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
 	<body>
