--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu solicitar-turno" class="option-menu" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu stateSing registrar-menu" class="option-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
+					<li><a class="link-style-menu stateSing registrar-menu registrar-ususario" class="option-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
