Se agrego la funcionalidad de donar para una campaña de donacion, por consecuente, se actualizo el index los estados de los botones, como se mostraban las campañas y un detalle en el html a la hora de registrar un perro

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 							<option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
 							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 							<option class="option-select-menu" value="formCampaniaDonacion.html">Registrar campaña de donacion</option>
+							<option class="option-select-menu" value="mostrarCampañasD.html">Mostrar campaña de donacion</option>
 						</select>
 					</li>
 					<div class="border"></div>
