--- a/formCampaniaDonacion.html
+++ b/formCampaniaDonacion.html
@@ -51,7 +51,7 @@
 				<input type="text" name="motivo" class="input-style" placeholder="Motivo" required><br>
                 <input type="text" name="resumen" class="input-style" placeholder="Resumen" required><br>
 				<p class="mensaje-error"></p>
-				<input type="submit" id="submitLog" value="Registrar" class="continuar-y-registrarme-btn">
+				<input type="submit" id="submitLog" value="Publicar campaña" class="continuar-y-registrarme-btn">
 				
 			</form>
         </div>
