--- a/formPagoDonacion.html
+++ b/formPagoDonacion.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog! - Regístrar perro</title>
+		<title>¡Oh My Dog! - Realizar donacion</title>
 		<link rel="stylesheet" href="css/style.css">
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
 	<body>
 		<header>
 			<img src="img/Logo1-removebg-preview.png" id="imghome">
-			<div id="menu">
+			<div id="menu"> x
 				<ul id="ul-style-menu">
 					<div class="border"></div>
 					<li><a class="link-style-menu option-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
-					<li>
+                    <li>
 						<a class="link-style-menu">SERVICIOS</a>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option class="option-select-menu" value="" selected disabled>Selecciona una opción</option>
@@ -25,20 +25,14 @@
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
-							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ver-usuarios option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-nos option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-con option-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu stateSing option-menu" href="sign-in.html">INICIAR SESION</a></li>
-					<div class="border"></div>
 					<li><a class="link-style-menu solicitar-turno option-menu" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
-					<div class="border"></div>
-					<li><a class="link-style-menu stateSing registrar-menu option-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
@@ -46,18 +40,30 @@
 			</div>
 		</header>
 
-		<div class="body-sign-in-and-up">
-            <form id="formulario" action="" method="post" >
-                <label class="form-label">Registrar perro</label><br><br>
-				<p>Ingese email del dueño: </p> 
-                <input type="email" id="email" name="email" class="input-style" placeholder="Email"><br>
+		<div class="body-contenedor">
+			<form id="formulario" action="index.html" method="post">
+                <h1>Forma de pago</h1><br><hr><hr><br>
+				<label class="form-label">Metodo de Pago</label><br>
+                <select name="tarjeta" required>
+                    <option value="visa">Visa</option>
+                    <option value="masterCard">Master Card</option>
+                    <option value="american">American Express</option>
+                </select><br><br>
+                <label class="form-label">Nombre completo</label><br>
+                <input type="text" name="name" class="input-style" placeholder="Nombre" required><br>
+                <label class="form-label">Numero de Tarjeta</label><br>
+                <input type="number" name="numero" class="input-style" placeholder="Numero de tarjeta" required><br>
+                <label class="form-label">Fecha de vencimiento</label><br>
+                <input type="date" name="date" class="input-style" required><br>
+                <label class="form-label">Codigo de Seguridad</label><br>
+                <input type="number" name="codigo" class="input-style" placeholder="CVC" required><br>				
+                <label class="form-label">Monto</label><br>
+                $<input type="number" name="monto" class="input-style" placeholder="0" required><br>
 				<p class="mensaje-error"></p>
-                <input type="submit" value="Validar email" class="continuar-y-registrarme-btn" >
-            </form>
+				<input type="submit" id="submitLog" value="Realizar donacion" class="continuar-y-registrarme-btn">
+				
+			</form>
         </div>
 	</body>
-		<script src="js/validarEmailPerros.js" type="module"></script>
-		<script src="js/obtenerIdUrlConForm.js"></script>
-		<script src="js/cambiarEstadoBotones.js"></script>
-	    <script src="js/cerrarSesion.js"></script>
+    <script src="js/validarDatosPago.js" type="module"></script>
 </html>
