--- a/mostrarCampañasD.html
+++ b/mostrarCampañasD.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog! - Regístrar perro</title>
+		<title>¡Oh My Dog! - Campañas de donacion</title>
 		<link rel="stylesheet" href="css/style.css">
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
-	<body>
+	<body class="adopcion">
 		<header>
-			<img src="img/Logo1-removebg-preview.png" id="imghome">
+			<a class="option-menu" href="index.html"><img src="img/Logo1-removebg-preview.png" id="imghome"></a>
 			<div id="menu">
 				<ul id="ul-style-menu">
 					<div class="border"></div>
-					<li><a class="link-style-menu option-menu" href="index.html">INICIO</a></li>
+					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
 					<li>
 						<a class="link-style-menu">SERVICIOS</a>
@@ -29,12 +29,11 @@
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ver-usuarios option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-nos option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-con option-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu stateSing option-menu" href="sign-in.html">INICIAR SESION</a></li>
+					<li><a class="link-style-menu stateSing registrar-perro option-menu" href="verificarEmailPerros.html">REGISTRAR PERRO</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu solicitar-turno option-menu" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
 					<div class="border"></div>
@@ -45,19 +44,14 @@
 				</ul>
 			</div>
 		</header>
-
-		<div class="body-sign-in-and-up">
-            <form id="formulario" action="" method="post" >
-                <label class="form-label">Registrar perro</label><br><br>
-				<p>Ingese email del dueño: </p> 
-                <input type="email" id="email" name="email" class="input-style" placeholder="Email"><br>
-				<p class="mensaje-error"></p>
-                <input type="submit" value="Validar email" class="continuar-y-registrarme-btn" >
-            </form>
+        
+        <div class="body-contenedor" id="contenedorDatos">
+            <h1>Campañas de donacion</h1><br>
+            <hr>
         </div>
-	</body>
-		<script src="js/validarEmailPerros.js" type="module"></script>
 		<script src="js/obtenerIdUrlConForm.js"></script>
-		<script src="js/cambiarEstadoBotones.js"></script>
+        <script src="js/mostrarCampañas.js" type="module"></script>
+	    <script src="js/cambiarEstadoBotones.js"></script>
 	    <script src="js/cerrarSesion.js"></script>
+	</body>
 </html>
